--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
 </head>
 <body>
-<a href="users">View users</a>
+<h1>Welcome to MealMaster</h1>
+<a href="items">View meals</a>
+<p>Some text</p>
 
 </body>
 </html>
