added <section> to home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="/styles/style.css" type="text/css">
 </head>
 <body>
+<section>
 <h1>Welcome to MealMaster</h1>
 <a href="items">View meals</a>
 <p>Some text</p>
+</section>
 
 </body>
 </html>
