--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 html{
     height: 100pc;
+    text-align:center;
 }
 
 body{
@@ -8,5 +9,10 @@ body{
     background-size: cover;
     color: white;
     text-align-all: center;
-
+}
+.middle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
