--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="/styles/style.css" type="text/css">
+
 </head>
 <body>
 <section>
-<h1>Welcome to MealMaster</h1>
+<h1 >Welcome to MealMaster</h1>
 <a href="items">View meals</a>
-<p>Some text</p>
+    <a href="contact">contact</a>
+    <p>Some text</p>
+    <div class="middle">
+        <h1>COMING SOON</h1>
+
+    </div>
 </section>
 
 </body>
