--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,13 +8,16 @@
 </head>
 <body>
 <section>
-<h1 >Welcome to MealMaster</h1>
-<a href="items">View meals</a>
+    <div class="icon-bar">
+        <a class="active" href="../">Home</a>
+        <a href="contact">Contact</a>
+    </div>
+    <h1 >Welcome to MealMaster</h1>
+    <a href="items">View meals</a>
     <a href="contact">contact</a>
     <p>Some text</p>
     <div class="middle">
         <h1>COMING SOON</h1>
-
     </div>
 </section>
 
