--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Permanent+Marker" rel="stylesheet">
 
 </head>
 <body>
-<section>
-<h1 >Welcome to MealMaster</h1>
-<a href="items">View meals</a>
-    <a href="contact">contact</a>
-    <p>Some text</p>
-    <div class="middle">
-        <h1>COMING SOON</h1>
 
-    </div>
-</section>
+<div class="bgimg">
+    <section>
+
+        <div class="middle">
+
+            <h1>COMING SOON</h1>
+            <h2 >MealMaster</h2>
+            <p>Simplify your shopping</p>
+            <p>Manage your meals</p>
+            <p>Reduce your rubbish</p>
+
+            <br>
+            <a href="items">View meals</a>
+            <br>
+            <br>
+            <a href="contact">Contact Us</a>
+
+        </div>
+
+        <div class="lower"></div>
+    </section>
+</div>
+
 
 </body>
 </html>
