--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,7 +11,7 @@
         <a class="active" href="contact">Contact</a>
     </div>
     <div class="contact">
-        <p>Contact <img src="logo.png" alt="Northern Lights" align="middle"></p>
+        <p><img src="logo.png" alt="Northern Lights" align="middle"></p>
             <% for(var i = 0; i < member.length; i++) { %>
                 <h2><%= member[i].name %> </h2>
                 <h2><%= member[i].Email %> </h2>
