--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,72 @@
+@import url('https://fonts.googleapis.com/css?family=Caveat');
+
 html{
     height: 100pc;
-    overflow: hidden;
 
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body{
+    margin: 0;
     background-image: url("https://source.unsplash.com/4R1YpmGO52I");
     background-position: center;
     background-size: cover;
+    height: 100pc;
     color: #fff7e6d6;
     display: grid;
-    grid-template-columns: 1fr 5fr 3fr; /*1fr repeat(5, 1fr) 3fr;*/
-    grid-template-rows: 1fr 2fr 2fr;
+    grid-template-areas:
+            "header header      header      header"
+            "nav meals       meals       list"
+            "nav ingredients ingredients list"
+            "nav ........... ........... ...."; /*this empty row doesn't show up, any ideas? */
 }
-@import url('https://fonts.googleapis.com/css?family=Caveat');
+
+@media screen and (min-width: 550px){
+    body{
+        grid-template-areas:
+                "header header      header      header"
+                "nav meals       meals       list"
+                "nav ingredients ingredients list"
+                "nav ........... ........... ....";
+    }
+}
 
 .contact{
     font-family: 'Signika Negative', sans-serif;
 }
 nav{
-
-    background-color: rgba(42,215,131,0.7);
-    grid-column: 1;
-    grid-row: 1/4;
+    grid-area: nav;
+    background-color: rgba(198, 160, 127, 0.7); /* fix this colour*/
+    height: auto;
+    width: 10em;
 }
-nav ul{
 
+nav a{
+    text-decoration: none;
+}
+
+nav ul{
+    padding: 0;
+    margin: 0;
 }
 nav li{
+    padding: 1em;
     list-style-type: none;
+    background-color: rgba(215,142,41,0.8); /* fix this colour*/
+}
+
+nav li:hover{
+    background-color: rgba(215, 142, 41, 0.44); /* fix this colour*/
+    color: #fff7e6d6;
+
+}
+
+nav .active{
+    background-color: rgba(255, 255, 255, 0.63);
+    color: coral;
 }
 
 h1{
@@ -43,22 +81,84 @@ a{
     color: #fff7e6d6;
 }
 
-#meals{
-    grid-column: 2;
-    grid-row: 2
+#meals {
+    grid-area: meals;
 }
 
-#ingredients{
-     grid-column: 2;
-     grid-row: 3
- }
+#ingredients {
+    grid-area: ingredients;
+}
 
 #shoppingList{
-    grid-column: 3;
-    grid-row: 2/4;
+    grid-area: list;
     background-color: rgba(215,121,91,0.3);
+    min-width: 20em;
+    display: grid;
+    grid-template-columns: 16em 4em;
+    grid-template-rows: auto;
 }
 
-.ingredient{
-    display: inline-block;
+.item_section{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 4em 240px 240px;
+    line-height: 4em;
+    padding: 0;
 }
+
+
+
+.item_section h2{
+    grid-row: 1;
+    grid-column: 1;
+    margin: 0;
+}
+
+.item_section a{
+    grid-row: 1;
+    grid-column: 2;
+}
+
+@media screen and (min-width: 1200px){
+    .item_section {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 4em 240px;
+    }
+    .item_section h2{
+        grid-column: 1/span 3;
+    }
+
+    .item_section a{
+        grid-column: 4;
+    }
+
+}
+
+.item_section img{
+    width: 200px;
+    height: 200px;
+}
+
+.item_section img:hover {
+    opacity: 0.4;
+    transition:opacity 0.5s;
+}
+
+/*
+.img_wrap p {
+    z-index: -1;
+    width: 200px;
+    line-height: 20px;
+    display: inline-block;
+    padding: 0px 0px;
+    vertical-align: middle;
+    height: 200px;
+}
+*/
+
+.item_description{
+    text-align: center;
+    display: inline-block;
+    height: 40px;
+}
+
