add profile page

--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Basket</title>
-    <!--<link rel="stylesheet" href="/styles/style.css" type="text/css">-->
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
     <link rel="stylesheet" href="../styles/basket.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,7 +25,7 @@
         <ul>
             <a href="/"><li>Home</li></a>
             <a href="/plan"><li>Plan</li></a>
-            <a href="/basket.html"><li class = "active">Basket</li></a>
+            <a href="/basket"><li class = "active">Basket</li></a>
             <a href="/profile"><li>Profile</li></a>
         </ul>
     </nav>
