--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,46 +1,33 @@
-@import url('https://fonts.googleapis.com/css?family=Caveat');
-
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
 html{
     height: 100pc;
+    font-family:'Josefin Sans', sans-serif;
 
 }
 
 body{
+    background-color: rgb(253, 255, 246);
     margin: 0;
     display: grid;
     grid-template-columns: 20% 50% 30%;
-    grid-template-rows: 100px 100px auto;
+    grid-template-rows: 150px 70px auto;
     grid-template-areas:
-                    "header header header"
+                    "nav header header"
                     "nav calendar search"
                     "nav ingredients search";
-
 }
-
-/*@media screen and (min-width: 550px){*/
-    /*body{*/
-        /*grid-template-areas:*/
-                /*"header header      header      header"*/
-                /*"nav meals       meals       list"*/
-                /*"nav ingredients ingredients list"*/
-                /*"nav ........... ........... ....";*/
-    /*}*/
-/*}*/
-
-.contact{
-    font-family: 'Signika Negative', sans-serif;
-}
-
 
 nav{
     grid-area: nav;
-    background-color: rgba(198, 160, 127, 0.7); /* fix this colour*/
-    height: auto;
+    background-color: rgba(226, 147, 91, 0.81); /* fix this colour*/
     width: 10em;
+    font-family:'GlacialIndifferenceRegular', sans-serif;
+    font-weight: 700;
 }
 
 nav a{
     text-decoration: none;
+    color: white;
 }
 
 nav ul{
@@ -50,38 +37,35 @@ nav ul{
 nav li{
     padding: 1em;
     list-style-type: none;
-    background-color: rgba(215,142,41,0.8); /* fix this colour*/
 }
 
 nav li:hover{
-    background-color: rgba(215, 142, 41, 0.44); /* fix this colour*/
-    color: #fff7e6d6;
-
+    background-color: rgba(255, 255, 255, 0.63);/* fix this colour*/
 }
 
 nav .active{
     background-color: rgba(255, 255, 255, 0.63);
-    color: coral;
-}
-
-
-a{
-    color: #fff7e6d6;
 }
 
 
 #ingredients {
     grid-area: ingredients;
+    padding-top: 2em
 }
 
+#ingredients td {
+    height: 4em;
+}
 
 .ingredient_name {
     width: 20%;
 }
 
 
+
 .life_bar_track {
     background-color: transparent;
+    padding-top: 10px;
 }
 
 #calendar_area {
@@ -89,22 +73,31 @@ a{
     display: grid;
     grid-template-columns: 20% 70% 10%;
     grid-template-areas: "left mid right";
+    background: rgb(227,233,221);
+
 
 }
 
 #calendar{
     grid-area: mid;
     text-align: center;
+    margin-top: 10px;
+}
+
+#calendar_area .week {
+    grid-area: left;
+    text-align: center;
+    margin-top: 25px;
 }
 
 #space{
     width: 20%;
 }
 
+
 .life_bar {
     -webkit-appearance: none;
     height: 1em;
-    /*background: #d3d3d3;*/
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
@@ -113,7 +106,6 @@ a{
 
 .life_bar::-webkit-slider-thumb {
     -webkit-appearance: none;
-    /*appearance: none;*/
     width: 15px;
     height: 15px;
     background: lightgoldenrodyellow;
@@ -136,44 +128,24 @@ a{
 
 /* search area */
 .search_bar{
+    margin-left: 4em;
     grid-area: search_bar;
+    width: 50%;
 }
 
-form {
-    width: 50%;
-    margin-left: 50px;
-}
-/* Style the search field */
-form.example input[type=text] {
+ /*Style the search field */
+.search_bar input[type=text] {
     padding: 10px;
     font-size: 17px;
-    border: 1px solid grey;
+    border: 2px solid grey;
     float: left;
     width: 80%;
-    background: #f1f1f1;
+    background: rgb(253, 255, 246);
 
-}
-
-
-/* Style the submit button */
-form.example button {
-    float: left;
-    width: 20%;
-    padding: 10px;
-    background: #2196F3;
-    color: white;
-    font-size: 17px;
-    border: 1px solid grey;
-    border-left: none; /* Prevent double borders */
-    cursor: pointer;
-}
-
-form.example button:hover {
-    background: #0b7dda;
 }
 
 /* Clear floats */
-form.example::after {
+.search_bar::after {
     content: "";
     clear: both;
     display: table;
@@ -182,5 +154,37 @@ form.example::after {
 /* search result */
 .search_result {
     grid-area: search_result;
+    margin-left: 4em;
 }
 
+
+/* button */
+input[type=button] {
+    border-radius: 17px;
+    font-family: Courier New;
+    color: #ffffff;
+    /*font-size: 1em;*/
+    background: #307528;
+    /*padding: 20px 25px 19px 24px;*/
+    text-decoration: none;
+    font-weight: bold;
+}
+
+input[type=button]:hover {
+    background: #4f8952;
+    background-image: -webkit-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -moz-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -ms-linear-gradient(top, #9bc495, #7ab073);
+    background-image: -o-linear-gradient(top, #9bc495, #7ab073);
+    background-image: linear-gradient(to bottom, #9bc495, #7ab073);
+    text-decoration: none;
+}
+
+.search_result td {
+    height: 3em;
+}
+
+
+header {
+    grid-area: header;
+}
