--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     <title>Login | MealMaster</title>
 
     <link rel="stylesheet" href="../styles/login.css">
-    <script src="public/login.js"> </script>
+    <script src="public/scripts/login.js"> </script>
 </head>
 <body>
 
