--- a/views/basket.ejs
+++ b/views/basket.ejs
@@ -39,13 +39,13 @@
 
         <table id="calendar">
             <tr>
-                <td>Sun<br>14/4/18 </td>
-                <td>Mon<br>15/4/18</td>
-                <td>Tue<br>16/4/18</td>
-                <td>Wed<br>17/4/18</td>
-                <td>Thur<br>18/4/18</td>
-                <td>Fri<br>19/4/18</td>
-                <td>Sat<br>20/4/18</td>
+                <td>Sun<br>14/4 </td>
+                <td>Mon<br>15/4</td>
+                <td>Tue<br>16/4</td>
+                <td>Wed<br>17/4</td>
+                <td>Thur<br>18/4</td>
+                <td>Fri<br>19/4</td>
+                <td>Sat<br>20/4</td>
             </tr>
 
         </table>
