style profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,42 +3,40 @@
 <title>MealMaster Profile</title>
 <!--<meta charset="UTF-8">-->
 <meta name="viewport" http-equiv="Content-Security-Policy" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/styles/style.css" type="text/css">
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="/styles/style.css" type="text/css">
+<link rel="stylesheet" href="/styles/profile.css" type="text/css">
 
-<body class="w3-light-grey ">
+<body>
     <nav>
-        <ul>
-            <a href="/"><li>Home</li></a>
-            <a href="/plan"><li>Plan</li></a>
-            <a href="/basket"><li class = "active">Basket</li></a>
-            <a href="/profile"><li>Profile</li></a>
-        </ul>
+        <%- include('./navbar.ejs', {active: "Profile"}); %>
     </nav>
 
-    <div class="w3-content w3-margin-top w3-white w3-container">
-        <div class="profile_picture">
+    <!--<div class=" w3-white profile">-->
+        <div class="profile_picture w3-margin-top w3-white w3-container">
             <img src="public/images/profile_pic.jpeg" alt="">
-            <h2>Lorem</h2>
+            <h2>Lorem Ipsum</h2>
         </div>
 
 
-        <div class="contact_detail w3-container">
+        <div class="contact_detail w3-white w3-margin-top w3-container">
             <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Carlton, Melbourne</p>
             <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>ex@mail.com</p>
             <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>1224435534</p>
         </div>
     </div>
 
-        <div class="about_me w3-content w3-margin-top w3-white w3-container">
+        <div class="about_me w3-margin-top w3-white w3-container">
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>About Me</b></p>
             <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit
                 sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
         </div>
 
-    <div class="share_with_me w3-content w3-margin-top w3-white w3-container w3-margin-bottom">
+    <div class="share_with_me w3-margin-top w3-white w3-container w3-margin-bottom">
         <div class="w3-margin-bottom">
             <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Please share with me</b></p>
             <span class="w3-tag w3-teal w3-round">brocolli</span>
