--- a/styles/plan.css
+++ b/styles/plan.css
@@ -19,31 +19,63 @@ body{
     }
 }
 
+
+button{
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: solid;
+    border-width: 1px;
+    width: 198px;
+    text-align: center;
+    height: 4em;
+
+}
+
+
+button:hover{
+    background-color: rgb(183,206,164);
+}
+
 #plan{
     grid-area: plan;
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(2, auto);
     grid-column-gap: 1em;
-    grid-template-rows: 4em 15em;
+    grid-template-rows: 4em auto;
     grid-row-gap: 1em;
     padding: 0;
 }
 
+@media screen and (min-width: 1200px){
+    #plan{
+        grid-template-columns: repeat(3, auto);
+    }
+}
+
+@media screen and (min-width: 1500px){
+    #plan{
+        grid-template-columns: repeat(4, auto);
+    }
+}
 
 #plan h2{
     grid-row: 1;
-    grid-column: 1 / span 4;
+    grid-column: 1 / -2;
     margin: 0;
 }
 
 #meals{
     grid-area: meals;
-    background-color: rgba(215,121,91,0.3);
-    min-width: 20em;
+    background-color: rgb(209,218,203);
+    min-width: auto;
     width: fit-content;
     display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 4em;
+    grid-template-columns: auto 4em;
+    grid-row-gap: 1em;
+    grid-template-rows: 4em auto 4em;
     line-height: 4em;
     margin: 1em;
     padding: 1em;
@@ -55,28 +87,48 @@ body{
 }
 
 #meals ul{
+    grid-column: 1/ -1;
     padding-left: 0;
     margin-top: 0;
     display: grid;
     list-style-type: none;
-    grid-template-columns: 200px 200px;
+    grid-template-columns: 200px;
+    grid-column-gap: 1em;
 }
 
-.plan_day{
+@media screen and (min-width: 1350px){
+    #meals ul{
+        grid-template-columns: 200px 200px;
+    }
+}
+
+#autofill-plan{
+    grid-column: 1/-1;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+
+.plan-day{
     text-align: center;
-    height: 260px;
-    width: 200px;
+    height: 280px;
+    width: 210px;
     border-style: solid;
     border-width: 2px;
     border-radius: 5%;
     border-color: black;
 }
 
+.plan-day *{
+    margin: auto;
+}
+
 
 .img_wrap{
     width: 200px;
     height: auto;
-    margin: 0;
     padding: 0px;
 }
 
@@ -91,8 +143,8 @@ body{
     transition:opacity 0.5s;
 }
 
-/* how to get rid of space between img and p???? */
 .img_wrap p{
     margin: 0;
     line-height: 2em;
 }
+
