--- a/styles/login.css
+++ b/styles/login.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Caveat');
+@import url('https://fonts.googleapis.com/css?family=Homemade+Apple');
 
 html{
     height: 100%;
@@ -11,8 +11,9 @@ body {
     background-image: url("https://source.unsplash.com/4R1YpmGO52I");
     background-position: center;
     background-size: cover;
-    color: #fff7e6d6;
+    color: rgba(32, 31, 29, 0.84);
     height: 100%;
+    font-weight: 700;
 }
 
 
@@ -22,9 +23,48 @@ form{
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    background-color: rgba(243,243,245, 0.8);
+    padding: 5em;
+    border-radius: 25px;
 }
 
 form *{
     display: block;
+    margin-top: 1em;
+}
+
+h1{
+    font-family: 'Homemade Apple', cursive;
+}
+
+button, .button{
+    border-radius: 5px;
+    display: inline-block;
+    color: rgb(118,144,76);
+    background-color: rgb(243,243,245);
+    text-decoration: none;
+    border: solid;
+    text-align: center;
+    height: 4em;
+    margin-left: auto;
+    margin-right: auto;
+    border-width: 1px;
+    width: 198px;
+
+}
+
+.button:hover, button:hover{
+    background-color: rgb(183,206,164);
+}
+
+input[type=text], input[type=password], input[type=email]{
+    border-width: 1px;
+    border-radius: 3px;
+    height: 2em;
+    width: 200px
+}
+
+a, a:visited{
+    color: inherit;
 }
 
