--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
     <input type="text" name="email" id="email"/>
     <label>password: </label>
     <input type="password" name="password" id="password"/>
-    <input onclick="login()" type="button" value="Enter"></input>
+    <input onclick="login()" type="button" value="Enter" class="button"/>
 
 </form>
 
