--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
     <input type="password" name="password">
     <label>confirm password: </label>
     <input type="password" name="password">
-    <button onclick="">Sign up!</button>
+    <button onclick="" id="signup">Sign up!</button>
     <a href="/login">Already a member?</a>
 </form>
 </body>
